--- a/051 Natural Language Processing - Übungen.ipynb
+++ b/051 Natural Language Processing - Übungen.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Natural Language Processing - Übungen\n",
     "- Versuchen Sie für die Sprachenerkennung ein eigenes Wörterbuch zu erstellen und es anstelle der Stopwords aus _nltk_ zu verwenden.\n",
-    "- Ändern Sie den Beispielsatz ab, indem sie _chancellor_ groß schreiben und betrachten Sie die Auswirkungen auf die Named Entity Recognition."
+    "- Ändern Sie den Beispielsatz ab, indem sie _chancellor_ groß schreiben und betrachten Sie die Auswirkungen auf die Named Entity Recognition.\n",
+    "- Ändern Sie die Relation Extraction auf Basis von Spacy so ab, dass erkannt wird, in welchem Land Angela Merken Kanzlerin ist."
    ]
   }
  ],
