Added search in NLP.

--- a/050 Natural Language Processing.ipynb
+++ b/050 Natural Language Processing.ipynb
@@ -5,16 +5,25 @@
    "metadata": {},
    "source": [
     "# Natural Language Processing\n",
-    "Die Verarbeitung von natürlicher Sprache ist eine der größten Herausforderungen in der Informatik.\n",
+    "Die Verarbeitung von natürlicher Sprache ist eine der größten Herausforderungen in der Informatik, da sie keine eindeutige Synta aufweist, mehrdeutig sein kann und häufig Fehler in Grammatik oder Schreibweise aufweist. In diesem Kapitel soll gezeigt werden, wie Texte mit Hilfe der zwei bekanntesten Bibliotheken **NLTK** und **SpaCy** unterteilt, normalisiert und analysiert werden können. Ziel ist es sogenannte Entitäten (Länder, Personen, Organisationen ...) und deren Beziehung untereinander aus einem Text herauszulesen und darzustellen. Weiterhin gilt es Ähnlichkeiten zwischen verschiedenen Betriffen herauszuarbeiten, die Stimmung eines Texts (oder von Abschnitten eines Texts) zu erfassen oder zu ermitteln, in welcher Sprache in Text erfasst ist.\n",
     "\n",
     "### Bibliotheken:\n",
+    "Gängige Bibliotheken für die Analyse von natürlicher Sprache sind im Folgenden aufgelistet und können evaluiert werden.\n",
     "- NLTK\n",
-    "- PyTorch NLP\n",
+    "- PyTorch-NLP\n",
     "- SpaCy\n",
-    "\n",
-    "\n",
-    "### Installation:\n",
-    "Neben der einfachen Installation von nltk über **pip install nltk**, benötigt die Bibliothek häufig sogenannte Corpora. Sollte ein solcher fehlen, wird entsprechend in der Fehlermeldung darauf hingewiesen. mit **nltk.download()** im Terminal wird das Download-Fenster von nltk geöffnet und die fehlenden Dateien nachgeladen. Im Beispiel-Code wird die Bibliothek per Befehl runtergeladen (_nltk.download('punkt')_)."
+    "- TextBlob\n",
+    "- AllenNLP\n",
+    "- langdetect (nur zum Erkennen von Sprachen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installation von NLTK\n",
+    "NLTK ist eine Bibliothek, die häufig in Wissenschaft und Forschung verwendung findet und durch ihre langjährige Präsenz am bekanntesten ist.\n",
+    "Neben der einfachen Installation von NLTK über **pip install nltk**, benötigt die Bibliothek häufig sogenannte Corpora. Sollte ein solcher fehlen, wird entsprechend in der Fehlermeldung darauf hingewiesen. mit **nltk.download()** im Terminal wird das Download-Fenster von nltk geöffnet und die fehlenden Dateien nachgeladen. Im Beispiel-Code wird die Bibliothek per Befehl runtergeladen (_nltk.download('punkt')_)."
    ]
   },
   {
@@ -81,7 +90,12 @@
     "## Extraktion von Informationen\n",
     "Im Folgenden soll der gesamte Prozess zur Extraktion von Informationen aus Texten aufgezeigt und programmatisch abgebildet werden. Dieser ist:\n",
     "\n",
-    "Raw Text -> Tokenisierung (Satzebene) -> Tokenisierung (Wortebene) -> Part Of Speech Tagging -> Entity Detection -> Relation Detection"
+    "1. Raw Text\n",
+    "2. Tokenisierung (Satzebene)\n",
+    "3. Tokenisierung (Wortebene)\n",
+    "4. Part Of Speech Tagging\n",
+    "5. Entity Detection\n",
+    "6. Relation Detection"
    ]
   },
   {
@@ -114,10 +128,6 @@
     "# https://datascience.blog.wzb.eu/2016/07/13/accurate-part-of-speech-tagging-of-german-texts-with-nltk/\n",
     "\n",
     "text = \"Cyber Security is a challenge for the German government and hence for the German chancellor Angela Merkel.\"\n",
-    "#text = \"Cyber Security is a challenge for the German government which is ran by chancellor Angela Merkel.\"\n",
-    "\n",
-    "# source: https://www.wired.com/story/notpetya-cyberattack-ukraine-russia-code-crashed-the-world/\n",
-    "#text = open(\"data/notpetya.txt\", \"r\").read()\n",
     "\n",
     "# Tokenizer zum Unterteilen von Texten in einzelne Sätze\n",
     "sentences = nltk.tokenize.sent_tokenize(text)\n",
@@ -553,16 +563,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**: Zeitliche Einordnung von Events\n",
-    "\n",
-    "**TODO**: Big Picture in Graph"
+    "## Suche in Texten\n",
+    "Das Suchen in Texten kann ebenfalls über NLTK abgebildet werden. Wichtig ist, dass der Text zuvor über word_tokenize in einzelne Wörter zerlegt wird. Als Beispieltext wird hier ein Bericht über _NotPetya_ herangezogen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Displaying 18 of 18 matches:\n",
+      "nce the invention of the internet—an attack that began , at least , as an assaul\n",
+      "s , it could even allow an automated attack to hopscotch from one machine to the\n",
+      "Tom Bossert , who at the time of the attack was President Trump ’ s most senior \n",
+      "ry—the prime suspect in any cyberwar attack targeting Ukraine—was responsible fo\n",
+      "htmarish but more typical ransomware attack that paralyzed the city government o\n",
+      "ruel and unexpected logic : Where an attack aimed at Ukraine strikes Maersk , an\n",
+      "d at Ukraine strikes Maersk , and an attack on Maersk strikes everywhere at once\n",
+      "-largest bank in Ukraine , was under attack . The bank had told ISSP that it was\n",
+      "g logs , Yasinsky could see that the attack was an automated worm that had someh\n",
+      "heir networks or reading news of the attack and frantically seeking advice . Sol\n",
+      "ters in the country were wiped . The attack even shut down the computers used by\n",
+      "mer says . About two weeks after the attack , Maersk ’ s network had finally rea\n",
+      "ersk had recovered from its NotPetya attack , Maersk chair Jim Hagemann Snabe sa\n",
+      "tion ’ s servers were , up until the attack , still running Windows 2000—an oper\n",
+      "iary TNT Express was crippled in the attack and required months to recover some \n",
+      "ven now , more than a year after the attack ’ s calamitous spread , cybersecurit\n",
+      "Oleksii Yasinsky , maintain that the attack was intended not merely for destruct\n",
+      ", information security too complex , attack surfaces too broad to protect agains\n"
+     ]
+    }
+   ],
+   "source": [
+    "# source: https://www.wired.com/story/notpetya-cyberattack-ukraine-russia-code-crashed-the-world/\n",
+    "notpetya_text = open(\"data/notpetya.txt\", \"r\").read()\n",
+    "notpetya_text2 = nltk.text.Text(nltk.tokenize.word_tokenize(notpetya_text))\n",
+    "#notpetya_text\n",
+    "notpetya_text2.concordance(\"attack\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NLP mit SpaCy\n",
+    "# NLP mit SpaCy\n",
     "Nun soll eine weitere Bibliothek betrachtet werden, die in der Lage ist natürliche Sprache zu analysieren. SpaCy ist etwas jünger als NLTK und sieht sich eher für industriellen Einsatz geeignet als NLTK, das für Forschung und Lehre konzipiert wurde."
    ]
   },
@@ -903,16 +951,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relation Extraction auf Basis eines Dependency Diagramms\n",
+    "Auf Basis des Dependecy Diagramms lässt sich ableiten, welches Token mit welchem anderen in welcher Beziehung steht. Das Token, von dem aus ein Pfeil auf ein anderes zeigt, ist über \"head\" zu referenzieren."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source text: Angela Merkel is the chancellor of Germany.\n",
-      "Visualization of tokens:\n"
+      "Zu analysierender Text: Angela Merkel is the chancellor of Germany.\n",
+      "Darstellung aller Tokens auf Wortebene:\n"
      ]
     },
     {
@@ -1014,7 +1070,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Visualization of joined entities and noun chunks:\n"
+      "Darstellung aller zusammengefügten Tokens aus den Spans:\n"
      ]
     },
     {
@@ -1107,7 +1163,7 @@
     "        span.merge()\n",
     "    \n",
     "    # Die Baumansicht ändert sich durch das Zusammenziehen von zusammegehörigen Nomen\n",
-    "    print(\"Visualization of joined entities and noun chunks:\")\n",
+    "    print(\"Darstellung aller zusammengefügten Tokens aus den Spans:\")\n",
     "    displacy.render(doc, style='dep', jupyter=True)\n",
     "\n",
     "    relations = []\n",
@@ -1122,10 +1178,11 @@
     "    return relations\n",
     "\n",
     "doc = nlp(\"Angela Merkel is the chancellor of Germany.\")\n",
-    "print(\"Source text:\", doc)\n",
-    "print(\"Visualization of tokens:\")\n",
+    "print(\"Zu analysierender Text:\", doc)\n",
+    "print(\"Darstellung aller Tokens auf Wortebene:\")\n",
     "displacy.render(doc, style='dep', jupyter=True)\n",
     "relations = extract_relations(doc)\n",
+    "\n",
     "for r1, r2 in relations:\n",
     "    print('{}\\t{}\\t{}'.format(r1.text, r1.ent_type_, r2.text))"
    ]
