--- a/050 Natural Language Processing.ipynb
+++ b/050 Natural Language Processing.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "source": [
     "### Tokenization zum Unterteilen von Texten\n",
-    "Bevor ein Text verarbeitet wird, wird er über einen Tokenizer in kleinere Einheiten unterteilt, etwa Sätze und Wörter."
+    "Bevor ein Text (auch Corpus genannt) verarbeitet wird, wird er über einen Tokenizer in kleinere Einheiten unterteilt, etwa Sätze und Wörter."
    ]
   },
   {
@@ -540,7 +540,7 @@
     "### Relation Extraction\n",
     "Nachdem Entitäten in Texten erkannt wurden, will man in der Regel Beziehungen zwischen ihnen herstellen. Eine Relation kann u.a. durch zwei Entitäten und ein Bindewort hergestellt werden.\n",
     "\n",
-    "__TODO__: Zum Laufen bringen"
+    "__Hinweis:__ Das Erfassen von Relationen ist mit NLTK ist etwas umständlich, sodass u.a. der jeweilige Entitätstyp angegeben werden und der Corpus über mehrere Vorkommnisse der Beziehung verfügen muss (andernfalls wird die Beziehung nicht erkannt). Der Vollständigkeit halber ist der Aufruf hier gezeigt, ein besseres Beispiel kann jedoch später unter Verwendung von SpaCy gefunden werden."
    ]
   },
   {
@@ -563,13 +563,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Suche in Texten\n",
+    "## (Optional) Suche in Texten\n",
     "Das Suchen in Texten kann ebenfalls über NLTK abgebildet werden. Wichtig ist, dass der Text zuvor über word_tokenize in einzelne Wörter zerlegt wird. Als Beispieltext wird hier ein Bericht über _NotPetya_ herangezogen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -600,10 +600,75 @@
    ],
    "source": [
     "# source: https://www.wired.com/story/notpetya-cyberattack-ukraine-russia-code-crashed-the-world/\n",
-    "notpetya_text = open(\"data/notpetya.txt\", \"r\").read()\n",
-    "notpetya_text2 = nltk.text.Text(nltk.tokenize.word_tokenize(notpetya_text))\n",
-    "#notpetya_text\n",
-    "notpetya_text2.concordance(\"attack\")"
+    "notpetya = open(\"data/notpetya.txt\", \"r\").read()\n",
+    "notpetya_tokens = nltk.text.Text(nltk.tokenize.word_tokenize(notpetya))\n",
+    "notpetya_tokens.concordance(\"attack\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (Optional) Sprachenerkennung\n",
+    "Häufig müssen Sprachen normalisiert werden, bevor sie analysiert werden können, sprich in eine gleiche Sprache übersetzt werden. Da viele Werkzeuge gute Corpora für Englisch bereitstellen, bietet sich die Übersetzung ins Englische an. Um eine Übersetzung durchzuführen, muss jedoch zunächst die Quellsprache ermittelt werden.\n",
+    "\n",
+    "Der einfachste Ansatz ist die Bibliothek _langdetect_ zu verwenden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langdetect import detect\n",
+    "\n",
+    "print(detect(\"War doesn't show who's right, just who's left.\"))\n",
+    "\n",
+    "print(detect(\"Ein, zwei, drei, vier\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spracherkennung anhand von Stopwords\n",
+    "\n",
+    "Ein probabilistischer Ansatz berechnet die Wahrscheinlichkeiten, dass ein Text in Spracht a, b oder c geschrieben ist, anhand der Vorkommnisse sogenannter Stopwords. Stopwords sind Begriffe wie \"ich\", \"haben\", \"auf\", \"im\" ... die für eine Analyse in den meisten Fällen wenig Bedeutung haben und oft herausgefiltert werden. Der Vorteil dieses Vorgehens ist, dass er recht einfach ist und _nltk_ eine eigene Liste von Stopwords pflegt.\n",
+    "\n",
+    "Quelle: http://blog.alejandronolla.com/2013/05/15/detecting-text-language-with-python-and-nltk/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk import wordpunct_tokenize\n",
+    "\n",
+    "def detect_language(text):\n",
+    "    languages_ratios = {}\n",
+    "    tokens = wordpunct_tokenize(text)\n",
+    "    words = [word.lower() for word in tokens]\n",
+    "\n",
+    "    # Wieviele Stopwords von Sprache language sind in text\n",
+    "    for language in stopwords.fileids():\n",
+    "        stopwords_set = set(stopwords.words(language))\n",
+    "        words_set = set(words)\n",
+    "        # Bereichne die Schnittmenge von stopwords und text\n",
+    "        common_elements = words_set.intersection(stopwords_set)\n",
+    "\n",
+    "        # Schreibe die Anzahl der Elemente der Schnittmenge als Wert für die Sprache language\n",
+    "        languages_ratios[language] = len(common_elements)\n",
+    "\n",
+    "    most_rated_language = max(languages_ratios, key=languages_ratios.get)\n",
+    "    return most_rated_language\n",
+    "\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "print(detect_language(\"Sicherheit ist sehr wichtig für uns.\"))"
    ]
   },
   {
@@ -960,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1185,72 +1250,6 @@
     "\n",
     "for r1, r2 in relations:\n",
     "    print('{}\\t{}\\t{}'.format(r1.text, r1.ent_type_, r2.text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sprachenerkennung\n",
-    "Häufig müssen Sprachen normalisiert werden, bevor sie analysiert werden können, sprich in eine gleiche Sprache übersetzt werden. Da viele Werkzeuge gute Corpora für Englisch bereitstellen, bietet sich die Übersetzung ins Englische an. Um eine Übersetzung durchzuführen, muss jedoch zunächst die Quellsprache ermittelt werden.\n",
-    "\n",
-    "Der einfachste Ansatz ist die Bibliothek _langdetect_ zu verwenden."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langdetect import detect\n",
-    "\n",
-    "print(detect(\"War doesn't show who's right, just who's left.\"))\n",
-    "\n",
-    "print(detect(\"Ein, zwei, drei, vier\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Spracherkennung anhand von Stopwords\n",
-    "\n",
-    "Ein probabilistischer Ansatz berechnet die Wahrscheinlichkeiten, dass ein Text in Spracht a, b oder c geschrieben ist, anhand der Vorkommnisse sogenannter Stopwords. Stopwords sind Begriffe wie \"ich\", \"haben\", \"auf\", \"im\" ... die für eine Analyse in den meisten Fällen wenig Bedeutung haben und oft herausgefiltert werden. Der Vorteil dieses Vorgehens ist, dass er recht einfach ist und _nltk_ eine eigene Liste von Stopwords pflegt.\n",
-    "\n",
-    "Quelle: http://blog.alejandronolla.com/2013/05/15/detecting-text-language-with-python-and-nltk/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import stopwords\n",
-    "from nltk import wordpunct_tokenize\n",
-    "\n",
-    "def detect_language(text):\n",
-    "    languages_ratios = {}\n",
-    "    tokens = wordpunct_tokenize(text)\n",
-    "    words = [word.lower() for word in tokens]\n",
-    "\n",
-    "    # Wieviele Stopwords von Sprache language sind in text\n",
-    "    for language in stopwords.fileids():\n",
-    "        stopwords_set = set(stopwords.words(language))\n",
-    "        words_set = set(words)\n",
-    "        # Bereichne die Schnittmenge von stopwords und text\n",
-    "        common_elements = words_set.intersection(stopwords_set)\n",
-    "\n",
-    "        # Schreibe die Anzahl der Elemente der Schnittmenge als Wert für die Sprache language\n",
-    "        languages_ratios[language] = len(common_elements)\n",
-    "\n",
-    "    most_rated_language = max(languages_ratios, key=languages_ratios.get)\n",
-    "    return most_rated_language\n",
-    "\n",
-    "nltk.download('stopwords')\n",
-    "\n",
-    "print(detect_language(\"Sicherheit ist sehr wichtig für uns.\"))"
    ]
   }
  ],
